--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "autoload": {
         "psr-4": {
             "Authorizer\\": "src/",
-            "Authorizer\\exceptions\\": "src/exceptions/"
+            "Authorizer\\exceptions\\": "src/exceptions/",
+            "Authorizer\\violations\\": "src/violations/"
         }
     },
     "require": {
